--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,51 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="myApp" class="no-js">
 
 <head>
-  <meta charset="utf-8">
-  <title>Arduino</title>
-  <link rel="stylesheet" href="stylesheets/style.css" type="text/css">
+    <meta charset="utf-8">
+    <title>Arduino</title>
+    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <!--    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>-->
+
+    <!--    <script scr="js/angular.js"></script>-->
+    <script src="js/angular/angular.min.js"></script>
+
+    <script src="app.js"></script>
+
+    <!--    <script src="/socket.io/socket.io.js" type="text/javascript"></script>-->
+    <!--    <script src="http://code.jquery.com/jquery-1.8.0.min.js" type="text/javascript"></script>-->
+    <!--  <script src="javascripts/script.js" type="text/javascript"></script>-->
 
 </head>
 
 <body>
 
-  <div class = "bar" style = "background-color:white;">
+    <!--
+    <div ng-controller="GreetingController" style="color:white">
+        {{ greeting }}
+    </div>
+-->
 
-  </div>
+    <div class="bar" style="background-color:white;">
 
-  <div class = "bar">
-    <form id ="pin-setup">
-      <select id = "pin-selection">
-      </select>
-      <input value="Add pin" type="submit">
-    </form>
-  </div>
-<!--
+    </div>
+
+    <div class="bar">
+        1+2 = {{1+3}}
+        <form id="pin-setup">
+            <select id="pin-selection">
+            </select>
+            <input value="Add pin" type="submit">
+        </form>
+    </div>
+    <!--
   <div id="addBoxes">
     <div class="box">Add pin</div>
   </div> -->
-  <div id="pinBoxes">
-  </div>
+    <div id="pinBoxes">
+    </div>
 
-  <script src="/socket.io/socket.io.js" type="text/javascript"></script>
-  <script src="http://code.jquery.com/jquery-1.8.0.min.js" type="text/javascript"></script>
-  <script src="javascripts/script.js" type="text/javascript"></script>
+
 </body>
+
 </html>
