--- a/angular rewrite/index.html
+++ b/angular rewrite/index.html
@@ -6,11 +6,24 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <script src="http://code.jquery.com/jquery.min.js"></script>
+
+    <!--    bootstrap-->
     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+
+    <!--    angular-->
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.1/angular-filter.js"></script>
     <script type="text/javascript" src="app.js"></script>
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.1/angular-filter.js"></script>
+    <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.12.0.js"></script>
+
+
+    <!--    highcharts-->
+    <script src="//rawgit.com/pablojim/highcharts-ng/master/src/highcharts-ng.js"></script>
+    <script src="http://code.highcharts.com/highcharts.src.js"></script>
+    <script src="http://code.highcharts.com/highcharts-more.js"></script>
+    <script src="http://code.highcharts.com/modules/solid-gauge.js"></script>
 </head>
 
 <body>
@@ -30,10 +43,10 @@
             <option value="">Select pin</option>
         </select>
 
-        <select ng-model="addPin.selectedType" ng-options="test for test in addPin.type" id="pin-selection" class="form-control" style="max-width: 150px; text-align: center; display: inline-block;">
-            <option value="">Select type</option>
-        </select>
-
+        <div class="btn-group">
+            <label class="btn btn-default" ng-model="addPin.selectedType" ng-model="radioModel" btn-radio="'Digital Write'" uncheckable>Digital Write</label>
+            <label class="btn btn-default" ng-model="addPin.selectedType" ng-model="radioModel" btn-radio="'Digital Read'" uncheckable>Digital Read</label>
+        </div>
 
         <input class="btn btn-success" value="Add pin {{addPin.selectedPin}} {{addPin.selectedType ? 'as ' + addPin.selectedType : null}}" ng-disabled="addPin.selectClass()" type="submit" style="min-width: 150px" ng-click="addPin.addPin()">
     </form>
@@ -41,12 +54,25 @@
 
 
     <div ng-controller="pinController as pins " class="container" id="pinBoxes">
-        <div ng-repeat="pin in pins.pins | toArray | orderBy: 'id'" class="box btn " ng-class="pins.selectClass(pin) " ng-click="pins.toggle(pin) ">
-            Pin {{pin.pin}} <span style="font-size:10px;">{{pin.type}}</span>
+        <div ng-show="pins.count()" ng-repeat="pin in pins.pins | toArray | orderBy: 'id'" class="box">
+
+            <div class="fill-space btn inline-table" ng-class="pins.selectClass(pin) " ng-click="pins.toggle(pin) " ng-show="pin.type == 'Digital Write'">
+                <div class="table-center font-20"> Pin {{pin.pin}} {{pin.type}}</div>
+
+            </div>
+
+            <div ng-show="pin.type == 'Digital Read'" class="fill-space btn btn-default">
+                <highchart id="chart1" config="pins.chartConfig" style="height: 100%; width: 100%; background: transparent;"></highchart>
+            </div>
+
+
         </div>
-        <div class="box btn btn-warning" style="min-width: 100%" ng-hide="pins.count()">
-            Add a pin to get started
+        <div class="box btn btn-warning table" style="min-width: 100%" ng-hide="pins.count()">
+            <div class="table-center">
+                Add a pin to get started
+            </div>
         </div>
+
     </div>
 </body>
 
