implemented digital write for new angular ui

--- a/angular rewrite/index.html
+++ b/angular rewrite/index.html
@@ -25,6 +25,10 @@
     <script src="http://code.highcharts.com/highcharts.js"></script>
     <script src="http://code.highcharts.com/highcharts-more.js"></script>
     <script src="http://code.highcharts.com/modules/solid-gauge.js"></script>
+
+    <!--    socket.io-->
+    <script src="/socket.io/socket.io.js" type="text/javascript"></script>
+
 </head>
 
 <body>
