--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="css/bstandard.css" type="text/css">
-    <script src="http://code.jquery.com/jquery.min.js"></script>
+    <script src="components/jquery/dist/jquery.js"></script>
 
     <!--    bootstrap-->
     <link href="components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -27,7 +27,7 @@
     <script src="js/dependences/solid-gauge.js"></script>
 
     <!--    socket.io-->
-    <script src="/socket.io/socket.io.js" type="text/javascript"></script>
+    <script src="components/socket.io.client/dist/socket.io-1.3.5.js" type="text/javascript"></script>
 
 </head>
 
